[package]
name = "cubix"
version = "0.6.4"
edition = "2021"
license = "MIT"
description = "Standardized building block components born for Rust craft."
repository = "https://github.com/andeya/cubix"
documentation = "https://docs.rs/cubix"
readme = "README.md"
homepage = "https://casdoor.org"
keywords = ["api", "http", "rpc", "jwt"]
authors = ["Andeya Lee <andeyalee@outlook.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api-response = ">=0.9"
convert_traits = ">=1.1"
getset2 = ">=0.2"
jwt-claims = "~1.0"

[features]
salvo = ["api-response/salvo", "jwt-claims/salvo"]
try = ["api-response/try"]
