[package]
name = "cubix"
version = "0.9.1"
edition = "2021"
license = "MIT"
description = "Standardized building block components born for Rust craft."
repository = "https://github.com/andeya/cubix"
documentation = "https://docs.rs/cubix"
readme = "README.md"
keywords = ["api", "http", "rpc", "jwt"]
authors = ["Andeya Lee <andeyalee@outlook.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api-response = ">=0.16.2"
convert_traits = ">=1.1"
getset2 = ">=0.4.0"
jwt-claims = ">=1.0.2"

[features]
# default = ["salvo", "try", "api_response_lite"]
salvo = ["api-response/salvo", "jwt-claims/salvo"]
try = ["api-response/try"]
api_response_lite = ["api-response/lite"]
